--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "primeflex",
   "displayName": "primeflex",
   "icon": "assets/icon.png",
+  "publisher": "franklinteixeira205",
   "author": {
     "name": "Franklin",
     "email": "franklinteixeira205@gmail.com",
