fix: display name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "primeflex",
-  "displayName": "primeflex",
+  "displayName": "PrimeFlex",
   "icon": "assets/icon.png",
   "publisher": "franklinteixeira205",
   "author": {
